Spacing issues v1000

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ nav {
     border-bottom: 1px solid hsl(0, 0%, 50%);
     height: 200px;
     margin: auto;
+    width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
 }
